# ODevLib

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  README.md  docker-compose.test.yml  justfile  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  sphinx_rtd_dark_mode
ci/: Dockerfile.docs  Dockerfile.test  docker-compose.docs.yml  entrypoint.sh  nginx.conf
docs/: Dockerfile  Makefile  code_style.rst  conf.py  contributing_to_opensource_odev_infrastructure.rst  cookiecutter_template_guide.rst  error_handling.md  index.rst  managing_env_variables.rst  models.md  nginx.conf  pagination.rst  recommended_structure.rst  rest_philosophy.md  usage.rst  views.md  why_django_is_hard_to_typecheck.md  working_with_external_apis.rst
docs/source/: conf.py  index.rst  rbac.md  recommended_structure.md  requirements.md  rest_philosophy.md  usage.rst
odevlib/: RBAC.md  README.md  admin.py  apps.py  permissions.py  urls.py
odevlib/admin/: __init__.py  errors.py  omodel.py  rbac.py
odevlib/business_logic/: pagination.py  relations.py
odevlib/business_logic/rbac/: permissions.py  permissions2.py
odevlib/caching/: __init__.py  redis_cache.py
odevlib/decorators/: __init__.py  error_atomicity.py  rbac.py  transaction.py
odevlib/distributed/: __init__.py  message_broker.py
odevlib/drf_spectacular/: ofilter_extension.py
odevlib/errors/: codes.py
odevlib/exceptions/: immutable.py  integrity.py
odevlib/fields/: multiple_value_field.py  rbac_model.py
odevlib/filters/: multiple_value_filter.py
odevlib/filters/backends/: ofilter_backend.py
odevlib/integrations/odevlib/: api_client.py
odevlib/middleware/: __init__.py  current_user.py  timescale_logger.py
odevlib/migrations/: 0001_initial_models.py  0002_added_request_logger.py  0003_remove_historicalsimplepermissionsystempermission_created_by_and_more.py  0003_updated_request_log_entry.py
odevlib/models/: __init__.py  errors.py  logging.py  omodel.py  simple_permission_system.py
odevlib/models/rbac/: instance_role_assignment.py  mixins.py  role.py  role_assignment.py  role_hierarchy.py
odevlib/prefetching/: __init__.py  prefetch.py
odevlib/schema/: oautoschema.py
odevlib/serializers/: __init__.py  omodelserializer.py  pagination.py  rbac_serializer.py  related.py  simple_permission_system.py
odevlib/serializers/rbac/: rbac_role.py  user_roles.py
odevlib/template_views/: logging.py
odevlib/templates/admin/: request_logs.html
odevlib/utils/: diff.py  functional.py  strings.py  users.py  views.py
odevlib/views/: __init__.py  mixins.py  oviewset.py
odevlib/views/rbac/: permissions.py  rbac_role.py
odevlib/views/sps/: __init__.py
odevlib_example/: asgi.py  settings.py  urls.py  wsgi.py
stubs/django_filters/: __init__.pyi  conf.pyi  constants.pyi  exceptions.pyi  fields.pyi  filters.pyi  filterset.pyi  utils.pyi  views.pyi  widgets.pyi
stubs/django_filters/rest_framework/: __init__.pyi  backends.pyi  filters.pyi  filterset.pyi
stubs/simple_history/: admin.pyi  manager.pyi  middleware.pyi  models.pyi  signals.pyi  utils.pyi
stubs/simple_history/management/commands/: clean_duplicate_history.pyi
stubs/simple_history/models/: __init__.pyi
stubs/simple_history/registry_tests/migration_test_app/: models.pyi
test_app/: admin.py  models.py  serializers.py  urls.py  views.py
test_app/migrations/: 0001_added_test_models.py  0001_initial_models.py  0002_added_example_rbac_models.py
tests/: conftest.py  test_decorators.py
tests/omodel/: test_omodel.py
tests/permissions/: conftest.py  test_rbac.py  test_rbac_serializer.py  test_rbac_views.py
tests/rbac/: test_rbac.py
tests/views/: test_oviewset.py
