[tool.poetry]
name = "odevlib"
version = "0.1.0"
description = "ODevLib is a Django helper library that provides a set of tools for developing web applications."
authors = ["iammaxim"]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Django = "^4.1.2"
django-simple-history = "^3.0.0"
djangorestframework = "^3.12.2"
drf-spectacular = "^0.26.1"
drf-spectacular-sidecar = "^2023.3.1"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.8.0"}
pandas-stubs = "^1.5.3.230214"
mypy = "^0.991"
openpyxl-stubs = "^0.1.25"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
types-docutils = "^0.19.1.6"
sphinx-immaterial = "^0.11.3"
myst-parser = "^1.0.0"
commonmark = "^0.9.1"
types-commonmark = "^0.9.2.2"
pytest-django = "^4.5.2"
black = "^23.3.0"
sphinx-autoapi = "^2.1.0"

